--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
   <![endif]-->
 </head>
 
-<body>
-
-  
-     
+<body>       
   <div class="container home">
-   
+    <header>
+        <nav>
+            <h1>Fun Bus</h1>
+            <a href="#">Home</a>
+            <a href="#">About Us</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
