--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
   <![endif]-->
 </head>
 
-<body>       
+<body>
+  <div class="navigation">
+    <nav>
+      <h1>Fun Bus</h1>
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+    </nav>
+  </div>
   <div class="container home">
     <header>
-        <nav>
-            <h1>Fun Bus</h1>
-            <a href="#">Home</a>
-            <a href="#">About Us</a>
-            <a href="#">Blog</a>
-            <a href="#">Contact</a>
-        </nav>
+      <img src="img/fun-bus.jpg">
     </header>
     <section class="content-section">
       <div class="text-content">
