--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
   <div class="navigation">
     <nav>
       <h1>Fun Bus</h1>
-      <a href="#">Home</a>
-      <a href="#">About Us</a>
-      <a href="#">Blog</a>
-      <a href="#">Contact</a>
+      <div>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+      </div>
     </nav>
   </div>
   <div class="container home">
