add choose your package form

--- a/index.html
+++ b/index.html
@@ -76,6 +76,31 @@
         <div class="btn">Sign Me Up!</div>
       </div>
     </section>
+    <section class="content-submit">
+      <div class="form">
+          <form>
+              <h2>Choose Your Package:</h2>
+              <div class="choices">
+                <input checked="checked" name="destination" type="radio" value="beach"/>Fun In The Sun
+                <input name="destination" type="radio" value="mountain"/>Mountain Excursion
+                <input name="destination" type="radio" value="island"/>Island Getaway
+              </div>
+              <div class="info">
+                <p>Name:</p>
+                <input type="text"/>
+                <p>E-Mail:</p>
+                <input type="text"/>
+                <p>Phone:</p>
+                <input type="text"/>
+                <p>Special Instructions:</p>
+                <textarea rows="4"></textarea>
+              </div>
+              <div class="submit">
+                <input type="submit"/>
+              </div>
+          </form>
+      </div>
+    </section>
   </div><!-- container -->
 
   <footer class="footer">
